2000-05-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i9

	* ntpd/ntp_crypto.c: tstamp and autokey cleanup
	From: Dave Mills

	* ntpd/ntp_proto.c (clock_update): Only call expire_all() if
	AUTOKEY
	From many folks, including Reg Clemens <reg@dwf.com>

2000-05-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i8

	* flock-build: Use new --with-crypto choices
	* build (KEYSUF): Deal with new --with-crypto
	* configure.in: --with-crypto={md5,autokey,rsaref};
	lose --enable-autokey

2000-05-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build (KEYSUF): Catch --disable-autokey first.

2000-05-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* flock-build: If we don't use autokey, don't use rsaref either.

	* configure.in: 4.0.99i7

	* build (KEYSUF): 
	* flock-build:
	It's --disable-autokey now

	* configure.in: MD5 is not optional (but AUTOKEY is)
	* include/ntp_stdlib.h: 
	* libntp/a_md5encrypt.c: 
	* libntp/authkeys.c: 
	(authhavekey): 
	(MD5auth_setkey): 
	(auth_delkeys): 
	(authencrypt): 
	(authdecrypt): 
	* libntp/authreadkeys.c: 
	(authreadkeys): 
	* ntpd/ntp_proto.c (init_proto): 
	* libntp/authusekey.c:
	MD5 is required.

2000-05-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i6

	* ntpd/ntp_proto.c (transmit): Fix up the UNREACH code.
	(receive): Lose some debug code.
	(clock_update): expire_all() if LEAP_NOTINSYNC
	crypto_xmit() a CRYPTO_AUTO if !FLAG_AUTOKEY instead of recauto.tstamp
	crypto_xmit() a CRYPTO_PRIV (not CRYPTO_AUTO) based on pcookie.tstamp
	crypto_xmit() a CRYPTO_AUTO (not CRYPTO_PRIV) based on FLAG_MCAST2
	and !FLAG_AUTOKEY	
	* ntpd/ntp_crypto.c (crypto_recv): Clean up debug output.
	Don't AUTOKEY if FLAG_MCAST2
	From: Dave Mills

	* flock-build: Also make obe withouyt md5 (no AUTOKEY)
	* build (BDIR): Handle -noautokey build directory suffix
	* configure.in: Prepare for AUTOKEY in mkver.in
	* scripts/mkver.in (ConfStr): Indicate in the version string if
	we're not using AUTOKEY.
