@@ -11,6 +11,12 @@
 NTP 4.x for Windows NT</h1>
 
 <h2>
+Do not try to compile NTP-4.0.99i under WINNT, it will not work.
+Fixed NTP-4.0.99i; look for next release to be functional.
+Sven - May 11 2000
+</h2>
+
+<h2>
 Download NTP-4.0.99g for the last stable WINNT port.
 I am working on adapting the major changes starting with 99i
 and getting things running again. Sven - April 25 2000
