@@ -18,9 +18,13 @@
 #endif
 # undef  OPEN_BCAST_SOCKET		/* for	ntp_io.c */ 													
 # undef  UDP_WILDCARD_DELIVERY	/* for	ntp_io.c */ 				/*	98/06/01  */
-# undef  DES				/* from libntp.mak */																
+# undef  DES				/* from libntp.mak */
 # define  MD5				/* from libntp.mak */	
 # define HAVE_RANDOM 
+#define MAXHOSTNAMELEN 64
+#define AUTOKEY
+
+#define finite _finite
 # define random      rand
 # define srandom     srand
 
